--- a/templates/index.html
+++ b/templates/index.html
@@ -18,9 +18,10 @@
                 <button id="recommend_button" class="btn">Recommend movie</button>
             </div>
         </div>
-        <div class="recommended-movie" id="recommended_movies">
-            <!-- Recommended movies will be displayed here -->
-        </div>
+        <div class="card">
+            <div class="recommended-movie" id="recommended_movies">
+                <!-- Recommended movies will be displayed here -->
+            </div>
     </div>
 
     <script src ="static/script.js"></script>
